--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   app:
-    image: sharathimage
+    image: sharath198/springbootapplication
     build:
       context: .
       dockerfile: Dockerfile
