--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 spring:
 
   datasource:
-    url: jdbc:mysql://db:3306/springboot
+    url: jdbc:mysql://localhost:3306/springboot
     username: root
-    password: root
+    password: pass@word1
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
